--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "src/assets/icons/si"]
 	path = src/assets/icons/si
 	url = https://github.com/simple-icons/simple-icons.git
+  ignore = dirty
