chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "core-js": "^3.6.5",
     "intersection-observer": "^0.12.0",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "supports-webp": "^2.0.1",
     "vue": "^2.6.11",
+    "vue-lodash": "^2.1.2",
     "vue-router": "^3.2.0",
     "vuetify": "^2.5.8",
     "vuex": "^3.4.0"
