--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "sass-loader": "^8.0.2",
     "vue-loader": "^15.9.8",
     "vue-svg-loader": "^0.17.0-beta.2",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "workbox-webpack-plugin": "^6.3.0",
+    "workbox-window": "^6.3.0"
   }
 }
