feat(App, views): add title template and title

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "supports-webp": "^2.0.1",
     "vue": "^2.6.11",
     "vue-lodash": "^2.1.2",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.5.8",
     "vuex": "^3.4.0"
