--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "idb-keyval": "^6.0.2",
     "intersection-observer": "^0.12.0",
-    "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "supports-webp": "^2.0.1",
     "vue": "^2.6.11",
