--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "b64-to-blob": "^1.2.19",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
     "idb-keyval": "^6.0.2",
     "supports-webp": "^2.0.1",
+    "tui-image-editor": "3.11.0",
     "vue": "^2.6.11",
     "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
+    "vuescroll": "^4.17.3",
     "vuetify": "2.5.8",
     "vuex": "^3.4.0"
   },
