--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
     "@fullhuman/postcss-purgecss": "3.0.0",
     "@mdi/js": "^6.2.95",
     "@vue/cli-plugin-babel": "~4.5.0",
