--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build --modern",
-    "lint": "eslint --format 'node_modules/eslint-friendly-formatter' . && markdownlint .",
+    "lint:javascript": "eslint --format 'node_modules/eslint-friendly-formatter' .",
+    "lint:styles": "stylelint **/*.{vue,htm,html,css,sss,less,scss,sass}",
+    "lint:markdown": "markdownlint .",
+    "lint": "run-p lint:*",
     "postinstall": "husky install"
   },
   "dependencies": {
@@ -50,10 +53,14 @@
     "intersection-observer": "^0.12.0",
     "markdownlint-cli": "^0.29.0",
     "netlify-cli": "^6.10.3",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "sass": "1.32.6",
     "sass-loader": "^8.0.2",
     "sitemap-webpack-plugin": "^1.1.1",
+    "stylelint": "^13.13.1",
+    "stylelint-cli": "^1.3.0",
+    "stylelint-config-sass-guidelines": "^8.0.0",
     "vue-loader": "^15.9.8",
     "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.14",
