--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,24 +4,20 @@ on: [push, pull_request]
 
 jobs:
   lint:
-    name: Lint
+    name: 🎨 Lint
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
       - name: Read .nvmrc
         run: echo ::set-output name=NODE_VERSION::$(cat .nvmrc)
         id: nvm
-
       - name: Use Node.js ${{ steps.nvm.outputs.NODE_VERSION }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ steps.nvm.outputs.NODE_VERSION }}
           cache: yarn
-
       - name: Install dependencies
         run: yarn install --prefer-offline --frozen-lockfile
-
       - name: Run all linters
         run: yarn lint
