chore(assets/icons/si): ignore all in submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "src/assets/icons/si"]
-	path = src/assets/icons/si
-	url = https://github.com/simple-icons/simple-icons.git
-	branch = 5.17.0
-  ignore = dirty
+  path = src/assets/icons/si
+  url = https://github.com/simple-icons/simple-icons.git
+  branch = master
+  ignore = all
