--- a/package.json
+++ b/package.json
@@ -85,5 +85,10 @@
     "vue-template-compiler": "^2.6.14",
     "workbox-webpack-plugin": "^6.3.0",
     "workbox-window": "^6.3.0"
-  }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
